# Family-Health-Manager

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  agy_report_300526.md  check-hash.sh  copy-db.sh  copy-utils.sh  deploy-frontend.sh  dev.sh  docker-compose.yml  final_report.md  fix-date-bug.sh  fix-dbsetup.sh  fix-dbsetup2.sh  fix-prompts.sh  fix-services.sh  fix-uuid.sh  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  project_review_done.md  qn_310526.md  qn_repo_300526.md  reset-password.sh  reset-password2.sh  start-backend.sh  start-caddy.sh  start.sh  sync-all2.sh  sync-dashboard.sh  team_dev.md
backend/: .bandit.yml  .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  openapi.json  package-lock.json  pyproject.toml
backend/.next/: _events_1185331.json  _events_1185637.json  _events_1186604.json  _events_1187626.json  trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/alembic/: env.py
backend/alembic/versions/: 2fd22ac8db51_add_health_alerts_indexes_and_fix_audit_.py  55b22b059456_sync_schema_to_current_models.py  6ea4e1d79d20_initial_schema.py  a1b2c3d4e5f6_add_refresh_tokens.py  b2c3d4e5f6a7_add_totp_fields.py  c3d4e5f6a7b8_add_user_role.py  d4e5f6a7b8c9_cascade_deletes.py  e3f4df27a556_add_storage_columns_to_attachments.py  f1a2b3c4d5e6_add_medications_and_lab_results.py  g2h3i4j5k6l7_add_notes_to_family_members.py  h4i5j6k7l8m9_add_performance_indexes.py  (+1 more)
backend/app/: main.py
backend/app/core/: cache.py  deps.py  (+17 more)
backend/scripts/: db_maintenance.py  export_openapi.py
backend/tests/: chatbot_context_snapshot.txt  chatbot_test_results.json  conftest.py  test_chatbot_accuracy.py
(+460 files in other folders)
